--- a/app/src/main/res/layout/activity_mian.xml
+++ b/app/src/main/res/layout/activity_mian.xml
@@ -1,25 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@color/firebrick">
+        android:layout_height="@dimen/activity_title_height"
+        android:background="@drawable/icon"
+        >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:gravity="center"
-            android:textColor="@color/whitesmoke"
-            android:textSize="25sp"
-            android:text="首  页"/>
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:textSize="24sp"/>
+
+        <FrameLayout
+            android:id="@+id/flSearch"
+            android:layout_width="@dimen/activity_title_height"
+            android:layout_height="match_parent"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true">
+
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/abc_ic_search_api_mtrl_alpha"                />
+        </FrameLayout>
 
     </RelativeLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
