--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -41,6 +41,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="16dp"
+        android:background="@drawable/search_edittext_shape"
         android:orientation="horizontal">
 
         <EditText
@@ -48,9 +49,9 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_weight="1"
-            android:background="@drawable/search_edittext_shape"
-            android:drawableLeft="@drawable/search"
-            android:drawablePadding="7dp"
+            android:background="@android:color/transparent"
+            android:drawableLeft="@android:drawable/ic_menu_search"
+            android:drawablePadding="10dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:gravity="center_vertical"
@@ -60,16 +61,15 @@
             android:singleLine="true"
             android:textColor="@color/black"
             android:textColorHint="@color/grey"
-            android:textSize="15sp"/>
+            android:textSize="17sp"/>
 
         <ImageView
             android:id="@+id/ivClean"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:background="@color/white"
             android:paddingRight="13dp"
-            android:src="@android:drawable/ic_input_delete"
+            android:src="@android:drawable/ic_menu_close_clear_cancel"
             android:visibility="gone"/>
 
         <TextView
@@ -80,7 +80,7 @@
             android:gravity="center"
             android:text="搜索"
             android:textColor="@color/white"
-            android:textSize="15sp"/>
+            android:textSize="17sp"/>
 
 
     </LinearLayout>
@@ -111,7 +111,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/search_empty"/>
+                android:src="@drawable/search_empty" />
 
             <TextView
                 android:layout_width="wrap_content"
