--- a/app/src/main/res/layout/activity_mian.xml
+++ b/app/src/main/res/layout/activity_mian.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/activity_title_height"
-        android:background="@drawable/icon"
+        android:background="@drawable/icon2"
         >
 
         <TextView
