--- a/app/src/main/res/layout/item_cooklist.xml
+++ b/app/src/main/res/layout/item_cooklist.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/tvName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
                 android:gravity="center"
                 android:maxLines="1"
                 android:textColor="@color/black"
@@ -39,10 +40,10 @@
                 tools:text="@string/test_text_title"/>
 
             <TextView
-                android:layout_marginTop="5dp"
                 android:id="@+id/tvIngredients"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:textColor="@color/dimgray"
