--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -85,6 +85,17 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/llTags"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/test_detail_tags"/>
+    </LinearLayout>
+
     <ListView
         android:id="@+id/searchList"
         android:layout_width="match_parent"
@@ -102,16 +113,16 @@
         android:visibility="gone">
 
         <LinearLayout
-            android:layout_marginTop="80dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
             android:gravity="center"
             android:orientation="vertical">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/search_empty" />
+                android:src="@drawable/search_empty"/>
 
             <TextView
                 android:layout_width="wrap_content"
