--- a/app/src/main/res/layout/item_cooklist.xml
+++ b/app/src/main/res/layout/item_cooklist.xml
@@ -29,7 +29,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tvName"
+                android:id="@+id/tvTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -40,7 +40,7 @@
                 tools:text="@string/test_text_title"/>
 
             <TextView
-                android:id="@+id/tvIngredients"
+                android:id="@+id/tvContent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
