--- a/app/src/main/res/layout/header_recipe_detail.xml
+++ b/app/src/main/res/layout/header_recipe_detail.xml
@@ -15,7 +15,7 @@
             android:id="@+id/ivPhoto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="matrix"
+            android:scaleType="centerCrop"
             />
 
         <LinearLayout
