--- a/app/src/main/res/layout/item_cooklist.xml
+++ b/app/src/main/res/layout/item_cooklist.xml
@@ -15,10 +15,10 @@
 
         <ImageView
             android:id="@+id/ivPhoto"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginLeft="16dp"
-            android:scaleType="centerCrop"
+            android:scaleType="centerInside"
             android:src="@drawable/image"/>
 
         <LinearLayout
