--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -35,57 +35,63 @@
 
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/llSearch"
+    <RelativeLayout
+        android:id="@+id/rlSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/search_edittext_shape"
-        android:orientation="horizontal">
+       >
 
-        <EditText
-            android:id="@+id/etSearch"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:drawableLeft="@android:drawable/ic_menu_search"
-            android:drawablePadding="10dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:gravity="center_vertical"
-            android:hint="@string/search_hint"
-            android:imeOptions="actionSearch"
-            android:paddingLeft="20dp"
-            android:singleLine="true"
-            android:textColor="@color/black"
-            android:textColorHint="@color/grey"
-            android:textSize="17sp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/search_edittext_shape"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/ivClean"
-            android:layout_width="wrap_content"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:paddingRight="13dp"
-            android:src="@android:drawable/ic_menu_close_clear_cancel"
-            android:visibility="gone"/>
+            <EditText
+                android:id="@+id/etSearch"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:drawableLeft="@android:drawable/ic_menu_search"
+                android:drawablePadding="10dp"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center_vertical"
+                android:hint="@string/search_hint"
+                android:imeOptions="actionSearch"
+                android:paddingLeft="20dp"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textColorHint="@color/grey"
+                android:textSize="17sp"/>
 
-        <TextView
-            android:id="@+id/tvSearch"
-            android:layout_width="65dp"
-            android:layout_height="40dp"
-            android:background="@drawable/search_btn_selector"
-            android:gravity="center"
-            android:text="搜索"
-            android:textColor="@color/white"
-            android:textSize="17sp"/>
+            <ImageView
+                android:id="@+id/ivClean"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:paddingRight="13dp"
+                android:src="@android:drawable/ic_menu_close_clear_cancel"
+                android:visibility="gone"/>
+
+            <TextView
+                android:id="@+id/tvSearch"
+                android:layout_width="65dp"
+                android:layout_height="40dp"
+                android:background="@drawable/search_btn_selector"
+                android:gravity="center"
+                android:text="搜索"
+                android:textColor="@color/white"
+                android:textSize="17sp"/>
+        </LinearLayout>
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/llTags"
