--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@color/white"
@@ -39,7 +40,7 @@
         android:id="@+id/rlSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-       >
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -68,7 +69,7 @@
                 android:singleLine="true"
                 android:textColor="@color/black"
                 android:textColorHint="@color/grey"
-                android:textSize="17sp"/>
+                android:textSize="18sp"/>
 
             <ImageView
                 android:id="@+id/ivClean"
@@ -96,13 +97,20 @@
     <LinearLayout
         android:id="@+id/llTags"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/test_detail_tags"/>
+        <zhangwei.mycook.common.customview.tag.TagGroup
+            android:id="@+id/tg"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:horizontalSpacing="10dp"
+            app:verticalSpacing="20dp"
+            app:orientation="horizontal"
+            app:paddingEnd="16dp"
+            app:paddingStart="16dp"
+            />
     </LinearLayout>
 
     <ListView
