--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -94,24 +94,25 @@
 
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/llTags"
+    <TextView
+        android:id="@+id/tvHint"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal">
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="搜一搜"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        />
 
-        <zhangwei.mycook.common.customview.tag.TagGroup
-            android:id="@+id/tg"
-            android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:horizontalSpacing="10dp"
-            app:verticalSpacing="20dp"
-            app:orientation="horizontal"
-            app:paddingEnd="16dp"
-            app:paddingStart="16dp"
-            />
-    </LinearLayout>
+    <zhangwei.mycook.common.customview.FlowLayout
+        android:id="@+id/flTags"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:padding="10dp"
+        android:visibility="gone"
+        app:lineSpacing="10dp"/>
 
     <ListView
         android:id="@+id/searchList"
