--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,11 @@
               android:background="@color/white"
               android:orientation="vertical">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/loopPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/tv"
         android:layout_width="match_parent"
