--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <zhangwei.mycook.common.customview.UpMarqueeTextView
+        android:id="@+id/tvUpMarquee"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"/>
+
     <TextView
         android:id="@+id/tv"
         android:layout_width="match_parent"
